[workspace]
resolver = "2"

members = [
    "core"
]

[workspace.package]
version = "0.1.0"
authors = ["gmgalactus <gmgalactus@mango.markets>"]
repository = "https://github.com/"
homepage = ""
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
ed25519 = "2.2.3"
serde = "1.0.216"
serde_json = "1.0.133"
bincode = "1.3.3"
ed25519-dalek = "2.1.1"
sha256 = "1.5.0"
log = "0.4.22"

# workspace dependencies
rakshasa-core = { path = "core", version = "0.1.0" }