[package]
name = "rakshasa-core"
description = "Rakshasa Core Library"
documentation = ""
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
ed25519 = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha256 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
